--- a/style.css
+++ b/style.css
@@ -3,21 +3,23 @@
     box-sizing: border-box;
     padding: 0;
     font-family: 'Times New Roman', Times, serif;
-    /* color: var(--white); */
+    color: var(--black);
 }
 
 :root {
-    --orange: #FF9F1C;
-    --yellow: #FFBF69;
-    --white: #FFFFFF;
-    --light_blue: #CBF3F0;
-    --green: #2EC4B6;
+    --black: #000000;
+    --blue: #14213D;
+    --white: #f8f9fa;
+    --orange: #FCA311;
+    --grey: #E5E5E5;
+
 }
 
 body {
     width: 100%;
     height: 100%;
-    background-color: var(--light_blue);
+    background: rgb(2,0,36);
+    background: linear-gradient(158deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
 }
 
 header {
@@ -25,7 +27,7 @@ header {
     display: flex;
     align-items: center;
     padding: 1.5em;
-    background-color: var(--light_blue);
+    background-color: var(--yellow);
 }
 
 form {
@@ -34,23 +36,34 @@ form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid var(--light_blue);
-    background-color: var(--green);
+    border: 1px solid var(--grey);
+    background-color: var(--white);
     border-radius: 1em;
     margin: 0 auto;
     max-width: 30em;
     padding: 0 auto;
 }
 
+label {
+    display: flex;
+    justify-items: left;
+}
 #cadastrar {
     margin-top: 1.5em;
     padding: 1em;
     border-radius: 1em;
     border: 0;
+    color: var(--white);
+    /* background: linear-gradient(158deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%); */
+    background: rgb(2,0,36);
+    background: linear-gradient(158deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
+    
 }
 
 #cadastrar:hover {
-    
+    background-color: var(--green);
+    transition: 0.7s;
+    cursor: pointer;
 }
 
 footer {
@@ -58,7 +71,7 @@ footer {
     display: flex;
     align-items: center;
     padding: 1.5em;
-    background-color: var(--light_blue);
+    /* background-color: var(--orange); */
 }
 
 form input + label {
