--- a/style.css
+++ b/style.css
@@ -18,8 +18,10 @@
 body {
     width: 100%;
     height: 100%;
-    background: rgb(2,0,36);
-    background: linear-gradient(158deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    /* background: rgb(2,0,36);
+    background: linear-gradient(158deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%); */
+    background: rgb(0,0,0);
+background: linear-gradient(150deg, rgba(0,0,0,1) 0%, rgba(20,33,61,1) 100%);
 }
 
 header {
@@ -30,18 +32,24 @@ header {
     background-color: var(--yellow);
 }
 
+form h1 {
+    
+}
+
 form {
     display: flex;
     height: 60dvh;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid var(--grey);
     background-color: var(--white);
     border-radius: 1em;
     margin: 0 auto;
     max-width: 30em;
     padding: 0 auto;
+    -webkit-box-shadow: 0px 0px 60px 0px rgba(255,255,255,1);
+    -moz-box-shadow: 0px 0px 60px 0px rgba(255,255,255,1);
+    box-shadow: 0px 0px 60px 0px rgba(255,255,255,1);
 }
 
 label {
@@ -49,14 +57,14 @@ label {
     justify-items: left;
 }
 #cadastrar {
+    font-weight: bold;
     margin-top: 1.5em;
     padding: 1em;
     border-radius: 1em;
     border: 0;
     color: var(--white);
-    /* background: linear-gradient(158deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%); */
-    background: rgb(2,0,36);
-    background: linear-gradient(158deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
+    background: rgb(0,0,0);
+    background: linear-gradient(150deg, rgba(0,0,0,1) 0%, rgba(20,33,61,1) 100%);
     
 }
 
