--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     box-sizing: border-box;
     padding: 0;
     font-family: 'Times New Roman', Times, serif;
-    color: var(--black);
 }
 
 :root {
@@ -18,25 +17,36 @@
 body {
     width: 100%;
     height: 100%;
-    /* background: rgb(2,0,36);
-    background: linear-gradient(158deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%); */
-    background: rgb(0,0,0);
-background: linear-gradient(150deg, rgba(0,0,0,1) 0%, rgba(20,33,61,1) 100%);
+    background: linear-gradient(150deg, rgba(0,0,0,1) 0%, rgba(20,33,61,1) 100%);
+    color: var(--black);
 }
 
 header {
     height: 20dvh;
     display: flex;
+    justify-content: space-around;
     align-items: center;
     padding: 1.5em;
-    background-color: var(--yellow);
+    font-size: 3em;
+    font-style: italic;
+    color: var(--white);
 }
 
-form h1 {
-    
+form > h1 {
+    position: absolute;
+    top: 1.25em;
+}
+
+form > section {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    /* align-items: center; */
 }
 
 form {
+    position: relative;
     display: flex;
     height: 60dvh;
     flex-direction: column;
@@ -56,10 +66,22 @@ label {
     display: flex;
     justify-items: left;
 }
+
+input {
+    padding: 0.55em;
+    max-width: 100%;
+    border: 1em;
+    border-radius: 1em;
+    border-bottom: 0.125em solid var(--grey);
+}
+
 #cadastrar {
+    position: absolute;
+    bottom: 1.25em;
     font-weight: bold;
+    font-size: 1.25em;
     margin-top: 1.5em;
-    padding: 1em;
+    padding: 0.65em;
     border-radius: 1em;
     border: 0;
     color: var(--white);
