--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@
 }
 
 body {
-    width: 100%;
-    height: 100%;
+    /* width: 100%; */
+    /* height: 100%; */
     background: linear-gradient(150deg, rgba(0,0,0,1) 0%, rgba(20,33,61,1) 100%);
     color: var(--black);
 }
@@ -39,24 +39,20 @@ form > h1 {
 
 form > section {
     width: 100%;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    /* align-items: center; */
+    margin-left: 5em;
+    margin-right: 5em;
 }
 
 form {
     position: relative;
     display: flex;
     height: 60dvh;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: var(--white);
     border-radius: 1em;
     margin: 0 auto;
     max-width: 30em;
-    padding: 0 auto;
     -webkit-box-shadow: 0px 0px 60px 0px rgba(255,255,255,1);
     -moz-box-shadow: 0px 0px 60px 0px rgba(255,255,255,1);
     box-shadow: 0px 0px 60px 0px rgba(255,255,255,1);
@@ -64,15 +60,19 @@ form {
 
 label {
     display: flex;
-    justify-items: left;
+    /* justify-items: left; */
 }
 
 input {
     padding: 0.55em;
-    max-width: 100%;
+    width: 100%;
     border: 1em;
     border-radius: 1em;
     border-bottom: 0.125em solid var(--grey);
+}
+
+form section div {
+    margin-bottom: 1em;
 }
 
 #cadastrar {
@@ -96,14 +96,29 @@ input {
     cursor: pointer;
 }
 
+#login {
+    font-weight: bold;
+    font-size: .5em;
+    padding: 0.65em;
+    border-radius: 1em;
+    border: 0;
+    color: var(--white);
+    background-color: transparent;
+    border: 1px solid var(--white);
+}
+
+#login:hover {
+    cursor: pointer;
+    -webkit-box-shadow: 0px 0px 60px 0px rgba(255,255,255,1);
+    -moz-box-shadow: 0px 0px 60px 0px rgba(255,255,255,1);
+    box-shadow: 0px 0px 20px 0px rgba(255,255,255,1);
+    transition: .5s;
+}
+
 footer {
     height: 20dvh;
     display: flex;
     align-items: center;
     padding: 1.5em;
     /* background-color: var(--orange); */
-}
-
-form input + label {
-    margin-top: 0.5em;
 }
