--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     color: var(--black);
 }
 
-header {
+header, footer {
     height: 20dvh;
     display: flex;
     justify-content: space-around;
@@ -35,6 +35,7 @@ header {
 form > h1 {
     position: absolute;
     top: 1.25em;
+    font-size: 1.5em;
 }
 
 form > section {
@@ -61,14 +62,17 @@ form {
 label {
     display: flex;
     /* justify-items: left; */
+    margin-bottom: 0.25em;
 }
 
 input {
     padding: 0.55em;
     width: 100%;
-    border: 1em;
+    border: 0.05em solid var(--grey);
     border-radius: 1em;
-    border-bottom: 0.125em solid var(--grey);
+    border-bottom: 0.155em solid var(--grey);
+    outline: 0;
+    font-size: 0.9em;
 }
 
 form section div {
@@ -91,7 +95,7 @@ form section div {
 }
 
 #cadastrar:hover {
-    background-color: var(--green);
+    background: linear-gradient(150deg, rgba(20,20,20,1) 0%, rgba(25,38,66,1) 100%);
     transition: 0.7s;
     cursor: pointer;
 }
@@ -113,12 +117,4 @@ form section div {
     -moz-box-shadow: 0px 0px 60px 0px rgba(255,255,255,1);
     box-shadow: 0px 0px 20px 0px rgba(255,255,255,1);
     transition: .5s;
-}
-
-footer {
-    height: 20dvh;
-    display: flex;
-    align-items: center;
-    padding: 1.5em;
-    /* background-color: var(--orange); */
 }
